--- a/Protocolo/Protocolo.csproj
+++ b/Protocolo/Protocolo.csproj
@@ -1,6 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 	  <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+	<ItemGroup>
+	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+	</ItemGroup>
 
 </Project>
