--- a/Servidor/App.config
+++ b/Servidor/App.config
@@ -6,5 +6,7 @@
 		<add key="TmpMostrarPub" value="10"/>
 		<add key="CntCarPub" value="280"/>
 		<add key="CntImgPub" value="3"/>
+		<add key="TopSeguidores" value="5"/>
+		<add key="TopMasUsos" value="5"/>
 	</appSettings>
 </configuration>
