fix bucle al cerrar cli o server + app.config

--- a/Servidor/App.config
+++ b/Servidor/App.config
@@ -2,7 +2,9 @@
 <configuration>
 	<appSettings>
 		<add key="ServerIpAddress" value="127.0.0.1"/>
-		<add key="ServerPort" value="6123"/>
+		<add key="ServerPort" value="20000"/>
+		<add key="ServerTCPConnPort" value="6000"/>
+		<add key="ServerTCPCliPort" value="6001"/>
 		<add key="TmpMostrarPub" value="10"/>
 		<add key="TopSeguidores" value="5"/>
 		<add key="TopMasUsos" value="5"/>
