Refactor de proyectos y codigo.

--- a/Cliente/App.config
+++ b/Cliente/App.config
@@ -3,8 +3,8 @@
 	<appSettings>
 		<add key="CntCarPub" value="280"/>
 		<add key="CntImgPub" value="3"/>
-		<add key="ServerIpAddress" value="127.0.0.1"/>
-		<add key="ServerPort" value="20000"/>
+		<add key="ClientIpAddress" value="127.0.0.1"/>
+		<add key="ClientPort" value="0"/>
 		<add key="ServerTCPLiPort" value="6000"/>
 	</appSettings>
 </configuration>
