--- a/Cliente/App.config
+++ b/Cliente/App.config
@@ -6,5 +6,6 @@
 		<add key="ServerIpAddress" value="127.0.0.1"/>
 		<add key="ServerPort" value="20000"/>
 		<add key="ServerTCPLiPort" value="6000"/>
+		<add key="ClientIpAddress" value="127.0.0.1"/>
 	</appSettings>
 </configuration>
