--- a/Servidor/Servidor.csproj
+++ b/Servidor/Servidor.csproj
@@ -8,6 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.21.1" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.46.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.46.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Logica\Logica.csproj" />
     <ProjectReference Include="..\LogSender\LogSender.csproj" />
     <ProjectReference Include="..\ProyectoCompartido\ProyectoCompartido.csproj" />
