--- a/LogServer.Repository.Implementation/LogServer.Repository.Implementation.csproj
+++ b/LogServer.Repository.Implementation/LogServer.Repository.Implementation.csproj
@@ -1,18 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.3.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\LogServer.Models\LogServer.Models.csproj" />
+    <ProjectReference Include="..\LogServer.Repository.Interfaces\LogServer.Repository.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
