--- a/LogServer.ServiceAdapter.Interfaces/LogServer.ServiceAdapter.Interfaces.csproj
+++ b/LogServer.ServiceAdapter.Interfaces/LogServer.ServiceAdapter.Interfaces.csproj
@@ -1,18 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.3.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\LogServer.Models\LogServer.Models.csproj" />
+    <ProjectReference Include="..\LogServer.Requests\LogServer.Requests.csproj" />
+    <ProjectReference Include="..\LogServer.Responses\LogServer.Responses.csproj" />
   </ItemGroup>
 
 </Project>
