--- a/LogServer/LogServer.csproj
+++ b/LogServer/LogServer.csproj
@@ -1,18 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="RabbitMQ.Client" Version="6.3.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ProyectoCompartido\ProyectoCompartido.csproj" />
+    <ProjectReference Include="..\LogServer.Exceptions\LogServer.Exceptions.csproj" />
+    <ProjectReference Include="..\LogServer.Repository.Implementation\LogServer.Repository.Implementation.csproj" />
+    <ProjectReference Include="..\LogServer.Repository.Interfaces\LogServer.Repository.Interfaces.csproj" />
+    <ProjectReference Include="..\LogServer.Requests\LogServer.Requests.csproj" />
+    <ProjectReference Include="..\LogServer.Responses\LogServer.Responses.csproj" />
+    <ProjectReference Include="..\LogServer.ServiceAdapter.Implementation\LogServer.ServiceAdapter.Implementation.csproj" />
+    <ProjectReference Include="..\LogServer.ServiceAdapter.Interfaces\LogServer.ServiceAdapter.Interfaces.csproj" />
+    <ProjectReference Include="..\LogServer.Services.Implementation\LogServer.Services.Implementation.csproj" />
+    <ProjectReference Include="..\LogServer.Services.Interfaces\LogServer.Services.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
