Se crea api de Servidor Administrativo Servidor es grpc Server ServerAdminLogic es grpc Client

--- a/SERVIDOREJEMPLO/Properties/launchSettings.json
+++ b/SERVIDOREJEMPLO/Properties/launchSettings.json
@@ -1,6 +1,6 @@
-{
+﻿{
   "profiles": {
-    "Servidor": {
+    "SERVIDOREJEMPLO": {
       "commandName": "Project",
       "launchBrowser": false,
       "applicationUrl": "http://localhost:7132",
