--- a/ServerAdminGrpcService/Properties/launchSettings.json
+++ b/ServerAdminGrpcService/Properties/launchSettings.json
@@ -1,9 +1,10 @@
-{
+﻿{
   "profiles": {
-    "Servidor": {
+    "ServerAdminGrpcService": {
       "commandName": "Project",
+      "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:7132",
+      "applicationUrl": "http://localhost:5265;https://localhost:7265",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
