--- a/Servidor/Servidor.csproj
+++ b/Servidor/Servidor.csproj
@@ -7,11 +7,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Protos\greet.proto" />
-  </ItemGroup>
-
-  <ItemGroup>
+	<ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.46.0" />
   </ItemGroup>
 
@@ -22,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Server" />
+    <Protobuf Include="Protos\greet.proto"/>
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://docs.gradle.com/build-cache-node/schema/build-cache-node-config-schema-5.json" properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
