--- a/ServerAdminLogic/ServerAdminLogic.csproj
+++ b/ServerAdminLogic/ServerAdminLogic.csproj
@@ -6,14 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-
+	<ItemGroup>
+		<Protobuf Include="Protos\greet.proto"/>
+	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.18.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.46.0" />
     <PackageReference Include="Grpc.Tools" Version="2.40.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
@@ -22,8 +24,6 @@
     <ProjectReference Include="..\ServerAdminLogicInterface\ServerAdminLogicInterface.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Protobuf Include="Protos\greet.proto" GrpcServices="Client" />
-  </ItemGroup>
+
 
 </Project>
