--- a/GrpcService1/Properties/launchSettings.json
+++ b/GrpcService1/Properties/launchSettings.json
@@ -1,6 +1,6 @@
-{
+﻿{
   "profiles": {
-    "Servidor": {
+    "GrpcService1": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
